# translate5-tm-service-source

./: .gitignore  Dockerfile  M.BAT  README.md  build.sh  my-config.bat  setvar.bat  tsan.suppr
Doc/: restapi.txt
source/: .OtmMemoryService.conf  CMakeLists.txt  Makefile  OTMMSJSONFactory.cpp  OTMMSJSONFactory.h  OtmMemoryService.cpp  OtmMemoryService.h  OtmMemoryServiceConfig.h  OtmMemoryServiceConfig.h.in  OtmMemoryServiceGUI.cpp  OtmMemoryServiceTester.cpp  OtmMemoryServiceWorker.cpp  OtmMemoryServiceWorker.h  ProxygenHandler.cpp  ProxygenHandler.h  ProxygenServer.cpp  Translate5.code-workspace  WinService.cpp  config.cpp  config.h  dummy_main.cpp  otmd.cpp  t5memory.conf
source/RestAPI/: OTMMSJSONFactory.cpp  OTMMSJSONFactory.h  OtmMemoryService.cpp  OtmMemoryServiceWorker.cpp  OtmMemoryServiceWorker.h  ProxygenHTTPAcceptor.h  ProxygenHandler.cpp  ProxygenHandler.h  ProxygenServer.cpp  ProxygenStats.cpp  ProxygenStats.h
source/ZipLib/: CMakeLists.txt
source/ZipLib/compression/: CMakeLists.txt
source/ZipLib/detail/: CMakeLists.txt
source/ZipLib/extlibs/: CMakeLists.txt
source/ZipLib/extlibs/bzip2/: CMakeLists.txt
source/ZipLib/extlibs/lzma/: CMakeLists.txt
source/ZipLib/extlibs/lzma/unix/: CMakeLists.txt
source/ZipLib/extlibs/zlib/: CMakeLists.txt
source/api/: OTMFUNC.C
source/cmake/: CheckGit.cmake  git_version.cpp.in  git_version.h
source/core/memory/: EQFMEM00.CPP  EQFMEMCD.CPP  EQFMEMEP.CPP  EQFMEMLP.CPP  MemoryFactory.cpp
source/core/mfc/: EQFMUPRP.CPP
source/core/pluginmanager/: OtmMemory.h  OtmSharedMemoryPlugin.h  OtmToolPlugin.h  PluginManager.h
source/core/utilities/: EQFPRO00.C  EQFUTDOS.C  EQFUTERR.C  EQFUTFIL.C  LanguageFactory.CPP  UtlAlloc.C  UtlLangCP.C  UtlMisc.cpp  UtlRegistry.c
source/core/workbench/: EQFMAIN.C
source/opentm2/: CMakeLists.txt  EQFX_API.C  EQFX_API.cpp  OTMFUNC.C  OTMFUNC.cpp  TestAPI.cpp
source/opentm2/api/: CMakeLists.txt
source/opentm2/core/: CMakeLists.txt  ProposalFilter.cpp  otm.cpp  requestdata.cpp  tm.cpp
source/opentm2/core/EqfMemoryPlugin/: CMakeLists.txt  EQFFUZZ.cpp  EQFMECLM.CPP  EQFMEM00.CPP  EQFMEM00.cpp  EQFMEMAddMatchSegID.CPP  EQFMEMCD.CPP  EQFMEMCD.cpp  EQFMEMEP.CPP  EQFMEMEP.cpp  EQFMEMIP.CPP  EQFMEMLD.CPP  EQFMEMLP.CPP  EQFMEMLP.cpp  EQFMEMMP.CPP  EQFMEMRP.CPP  EQFMEMUT.C  EQFMEMUT.cpp  EQFNTCR.C  EQFNTCR.cpp  EQFNTDEL.C  EQFNTDEL.cpp  EQFNTEXT.C  EQFNTEXT.cpp  EQFNTGET.CPP  EQFNTGET.cpp  EQFNTM.C  EQFNTM.cpp  EQFNTMDB.C  EQFNTMDB.cpp  EQFNTOP.C  EQFNTOP.cpp  EQFNTPUT.C  EQFNTPUT.cpp  EQFNTUTL.C  EQFNTUTL.cpp  EQFTMFUN.CPP  EQFTMM.CPP  EQFTMMV.CPP  EQFTMRTV.C  (+11 more)
source/opentm2/core/analysis/: CMakeLists.txt  EQFANA00.CPP  EQFIANA1.C  EQFTAARC.CPP  EQFTALP0.C  EQFTAML.CPP  EQFTATAG.C  EQFTSEGM.CPP  LoadBalancerList.CPP
source/opentm2/core/counting/: CMakeLists.txt  EQFCNT00.C  EQFRPXML.CPP
source/opentm2/core/dictionary/: DictPluginWrapper.cpp  EQFQDAMI.C
source/opentm2/core/document/: CMakeLists.txt  CXMLWRITER.CPP  CXMLWRITER.cpp  DocumentPluginMapper.cpp  EQFMAIN.C  EQFMAIN.cpp  EQFTATAG.C  EQFTATAG.cpp  InitPlugins.cpp  InitPlugins.h  ValDocExp.CPP
source/opentm2/core/linguistic/: CMakeLists.txt  EQFMORPH.CPP
source/opentm2/core/lists/: CMakeLists.txt
source/opentm2/core/memory/: CMakeLists.txt  EQFMEM00.CPP  EQFMEMCD.CPP  EQFMEMEP.CPP  EQFMEMIP.CPP  EQFMEMLP.CPP  EQFMEMMP.CPP  EQFTMM.CPP  GenericTagReplace.cpp  MemoryFactory.cpp  MemoryFactory.h  TMPluginWrapper.cpp
source/opentm2/core/morph/: CMakeLists.txt  MorphFactory.cpp  MorphFactory.h  OtmMorphICU.cpp  OtmMorphICU.h  OtmMorphICUPlugin.cpp  OtmMorphICUPlugin.h  OtmMorphPlugin.h  SpellFactory.cpp  SpellFactory.h
source/opentm2/core/pluginmanager/: CMakeLists.txt  HistoryWriter.h  OtmComm.h  OtmDictionary.h  OtmDictionaryPlugin.h  OtmDocument.h  OtmDocumentPlugin.h  OtmHttp.h  OtmHttps.h  OtmMarkup.h  OtmMarkupPlugin.h  OtmMemory.h  OtmMemoryPlugin.h  OtmMorph.h  OtmMorphICU.cpp  OtmMorphICUPlugin.cpp  OtmMorphICUPlugin.h  OtmMorphPlugin.h  OtmPlugin.h  OtmSftp.h  OtmSftpConfig.h  OtmSharedMemory.h  OtmSpell.h  OtmSpellPlugin.h  PlgMgXmlParser.h  PluginManager.cpp  PluginManager.h  PluginManagerImpl.cpp  PluginManagerImpl.h  TimeManager.h
source/opentm2/core/services/: CMakeLists.txt
source/opentm2/core/spell/: CMakeLists.txt  SpellFactory.cpp  SpellFactory.h
source/opentm2/core/tagtable/: CMakeLists.txt  EQFTIMP.C  EQFTOKEN.C  EQFTOKEN.cpp  MarkupPluginMapper.cpp
source/opentm2/core/utilities/: Base64.h  CMakeLists.txt  EQFDICT.C  EQFDICT.CPP  EQFDICT.cpp  EQFHASH.C  EQFMORPH.CPP  EQFMORPH.cpp  EQFMORPW.C  EQFMORPW.cpp  EQFOBJ00.C  EQFOBJ00.cpp  EQFOSWIN.C  EQFOSWIN.cpp  EQFPRO00.C  EQFPRO00.cpp  EQFSETUP.C  EQFSETUP.cpp  EQFTADIT.CPP  EQFTADIT.cpp  EQFUTDLG.CPP  EQFUTDOS.C  EQFUTDOS.cpp  EQFUTERR.C  EQFUTERR.cpp  EQFUTFIL.C  EQFUTFIL.cpp  EQFUTLNG.CPP  EQFUTLNG.cpp  EncodingHelper.cpp  EncodingHelper.h  EqfPluginWrapper.cpp  EqfPluginWrapper.h  FilesystemHelper.cpp  FilesystemHelper.h  FilesystemWrapper.cpp  FilesystemWrapper.h  LanguageFactory.CPP  LanguageFactory.H  LanguageFactory.cpp  (+39 more)
source/opentm2/core/workbench/: CMakeLists.txt  EQFFLL00.CPP  EQFFOLLI.C  EQFLNG00.C  EQFMAIN.C  EQFPLGMG.CPP
source/opentm2/plugins/: CMakeLists.txt
source/opentm2/plugins/EqfMemoryPlugin/: CMakeLists.txt  EQFMEMUT.C  EQFNTCL.C  EQFNTCR.C  EQFNTDEL.C  EQFNTEXT.C  EQFNTGET.CPP  EQFNTM.C  EQFNTMDB.C  EQFNTOP.C  EQFNTPUT.C  EQFNTUTL.C  EqfMemory.cpp  EqfMemory.h  EqfMemoryPlugin.cpp  EqfMemoryPlugin.h  GenericTagReplace.cpp  MemoryFactory.cpp  OTMTMXIE.CPP  OTMXLFMT.CPP  OpenTM2_EqfMemoryPlugin.pc  TMPluginWrapper.cpp
source/opentm2/plugins/markup/: CMakeLists.txt
source/opentm2/tools/: CMakeLists.txt  CXMLWRITER.CPP
source/opentm2/tools/common/: CMakeLists.txt  InitPlugins.cpp
source/plugins/OtmMemoryService/: CMakeLists.txt  OTMMSJSONFactory.cpp  OtmMemoryService.CPP  OtmMemoryService.H  OtmMemoryService.cpp  OtmMemoryService.h  OtmMemoryServiceTester.CPP  OtmMemoryServiceTester.cpp  OtmMemoryServiceWorker.CPP  OtmMemoryServiceWorker.H  OtmMemoryServiceWorker.cpp  OtmMemoryServiceWorker.h  WinService.CPP
(+176 files in other folders)
