
cmake_minimum_required(VERSION 3.10)
#project(ZipLib_core)

#add_subdirectory(compression)
#add_subdirectory(detail)
#add_subdirectory(extlibs)
#add_subdirectory(methods)
#add_subdirectory(streams)
#add_subdirectory(utils)


#set(ZipLibSourceFiles ZipArchive.cpp 
#                      ZipArchiveEntry.cpp 
#                      ZipFile.cpp
#)


#add_library(ZipLib ${ZipLibSourceFiles})